<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ml.sakii</groupId>
  <artifactId>factoryisland</artifactId>
  <version>0.10.2</version>
  <name>FactoryIsland</name>
  <description></description>
  <properties>
  <maven.compiler.source>15</maven.compiler.source>
  <maven.compiler.target>15</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
	  <groupId>org.openjdk.nashorn</groupId>
	  <artifactId>nashorn-core</artifactId>
	  <version>15.0</version>
	</dependency>
  </dependencies>
  <build>
  <resources>
	<resource>
   	  <directory>src/main/resources</directory>
      <filtering>true</filtering>
    </resource>
  </resources>
  <plugins>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>2.5.2</version>
    </plugin>
    <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.5.0</version>
        <executions>
        <execution>
            <phase>install</phase>
            <goals>
            <goal>exec</goal>
            </goals>
            <configuration>
            <executable>target/build.sh</executable>
            <workingDirectory>target</workingDirectory>
            <arguments>
                <argument>${project.version}</argument>
            </arguments>
            </configuration>
        </execution>
        </executions>
    </plugin>
      <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
                <execution>
                    <phase>generate-resources</phase>
                    <goals>
                        <goal>write-project-properties</goal>
                    </goals>
                    <configuration>
                        <outputFile>${project.build.outputDirectory}/version.properties</outputFile>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    <plugin>
      <!-- Build an executable JAR -->
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-jar-plugin</artifactId>
      <version>3.1.0</version>
      <configuration>
        <archive>
          <manifest>
            <addClasspath>true</addClasspath>
            <mainClass>ml.sakii.factoryisland.Main</mainClass>
          </manifest>
        </archive>
      </configuration>
    </plugin>
  </plugins>
</build>
</project>
